@startuml

!theme mirco from .

class Location {
  ...
}

class Server {
  ...
}

class TxConnector {
  ...
  url
  ...
}

class SoftwareConnection {
  location_id
  server_id
  source_connector_id
  source_url: string
  destination_connector_id
  destination_url: string
  channel_ids: integer, array:true
  ignore: boolean
  ignore_reason: string
  description: <<actiontext>>
}

class RxConnector {
  ...
  url
  ...
}

Location "1" -- "*" SoftwareConnection
Server "1" -- "*" SoftwareConnection

TxConnector "1" -> "*" SoftwareConnection
note on link
**Source:**
url == source_url
end note
SoftwareConnection "*" -> "1" RxConnector
note on link
**Destination:**
destination_url == url
end note
@enduml
